Completed:   update some file To do:   .

--- a/javascript/06/gatherer/Gemfile
+++ b/javascript/06/gatherer/Gemfile
@@ -25,7 +25,7 @@ group :development, :test do
   gem 'database_cleaner'
   gem 'jasmine-rails'
   gem 'poltergeist'
-  gem 'rspec-rails', '~> 3.1'
+  gem 'rspec-rails'
 end
 
 group :test do
